--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -69,13 +69,13 @@ p {
     margin-left: 25px;
 }
 /* this is the 3 section boxes  */
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 /* this is the aside style */
-.benefits {
+aside  {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,35 +86,28 @@ p {
     background-color: #2589bd;
 }
 /* this is the aside content can these be combined? */
-.benefit-lead {
+.benefit-brand .benefit-lead .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 /* this is each headline in the aside */
-.benefit-lead h3 {
+.benefit-lead h3  {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
+.benefit-brand h3  {
     margin-bottom: 10px;
     text-align: center;
 }
 
 .benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
+        margin-bottom: 10px;
+        text-align: center;
 }
+            
+
 /* could these be combined? */
 .benefit-lead img {
     display: block;
@@ -189,13 +182,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
