--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,11 +69,13 @@ p {
     margin-left: 25px;
 }
 /* this is the 3 section boxes  */
+
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
+
 /* this is the aside style */
 aside  {
     margin-right: 20px;
@@ -85,49 +87,27 @@ aside  {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* this is the aside content can these be combined? */
-.benefit-brand .benefit-lead .benefit-cost {
+/* combined classes */
+.benefit-brand,.benefit-lead,.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-/* this is each headline in the aside */
-.benefit-lead h3  {
+/* combined classes */
+.benefit-lead h3,.benefit-brand h3,.benefit-cost h3  {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3  {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-        margin-bottom: 10px;
-        text-align: center;
-}
-            
-
-/* could these be combined? */
-.benefit-lead img {
+/* combined classes */
+.benefit-lead img,.benefit-brand img,.benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/* these would be for the main section  section main? */
-.search-engine-optimization {
+/*combined classes */
+.search-engine-optimization,.online-reputation-management,.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -136,52 +116,18 @@ aside  {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+/* combined classes for both sections */
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* these could be combined as they have the same specs? */
-
-.search-engine-optimization img {
+.search-engine-optimization img,.online-reputation-management img,.social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.search-engine-optimization h2,.online-reputation-management h2,.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* created footer tag instead of div */
 footer {
     padding: 30px;
     clear: both;
